@@ -37,9 +37,9 @@ test_that('syntax', {
                  tollerance = 1e-2)
     expect_equal(mod2values(mod3)$value, c(1.10784174676958, 1.91239633478765, 0, 1, 1.04684043398884, 0.797880409701628, 0, 1, 1.04684043398884, 1.47310584064986, 0, 1, 1.04684043398884, 0.526104887330641, 0, 1, 1.04684043398884, 2.00877254688793, 0, 1, 0, 1),
                  tollerance = 1e-2)
-    expect_equal(mod2values(mod4)$value, c(0.632433399913566, 1.49702480309375, 0, 1, 2.96489599420371, 1.49702480309375, 0, 1, 1.18479364102936, 1.64385960781437, 0, 1, 0.559375717878399, 0.54637999600046, 0, 1, 0.50324865634891, 1.69989452992446, 0, 1, 0, 1, 0.632433399913566, 1.72304351110227, 0, 1, 2.96489599420371, 1.72304351110227, 0, 1, 1.18479364102936, 1.49301751792476, 0, 1, 0.559375717878399, 0.411003389624152, 0, 1, 0.50324865634891, 1.84027629606117, 0, 1, 0, 1),
+    expect_equal(mod2values(mod4)$value, c(0.632433386364048, 1.49702486346345, 0, 1, 2.96489722606489, 1.49702486346345, 0, 1, 1.18479385862914, 1.64385966616173, 0, 1, 0.559375636820039, 0.546379939983741, 0, 1, 0.503248507572237, 1.69989443532475, 0, 1, 0, 1, 0.632433386364048, 1.72304362449882, 0, 1, 2.96489722606489, 1.72304362449882, 0, 1, 1.18479385862914, 1.49301755218875, 0, 1, 0.559375636820039, 0.411003355734207, 0, 1, 0.503248507572237, 1.84027620095569, 0, 1, 0, 1),
                  tollerance = 1e-2)
-    expect_equal(mod2values(mod5)$value, c(0.737129810199611, 1.35704119053397, 0, 1, 1.48519999159597, 1.35704119053397, 0, 1, 1.05934894888508, 1.35704119053397, 0, 1, 1.27305192361326, 1.35704119053397, 0, 1, 0.471202346227738, 1.35704119053397, 0, 1, 0, 1, 0.737129810199611, 1.86332826252524, 0, 1, 1.48519999159597, 0.949840930239808, 0, 1, 1.05934894888508, 1.39297931077557, 0, 1, 1.27305192361326, 0.47295678994725, 0, 1, 0.471202346227738, 1.81137838246491, 0, 1, 0, 1),
+    expect_equal(mod2values(mod5)$value, c(0.737129505226237, 1.35704143060501, 0, 1, 1.48520300345399, 1.35704143060501, 0, 1, 1.05934883550827, 1.35704143060501, 0, 1, 1.27305097103351, 1.35704143060501, 0, 1, 0.471202089414926, 1.35704143060501, 0, 1, 0, 1, 0.737129505226237, 1.86332806707802, 0, 1, 1.48520300345399, 0.949841783215661, 0, 1, 1.05934883550827, 1.39297918257708, 0, 1, 1.27305097103351, 0.472956611691705, 0, 1, 0.471202089414926, 1.81137826788352, 0, 1, 0, 1),
                  tollerance = 1e-2)
     expect_equal(mod2values(mod6)$value, c(1.09030829179912, 0, 1.91140892885227, 0, 1, 1.09030829179912, 0, 0.810348391277771, 0, 1, 0, 1.01018157535737, 1.46075737389013, 0, 1, 0, 1.01018157535737, 0.521336706621957, 0, 1, 0, 1.01018157535737, 1.99270562102773, 0, 1, 0, 0, 1, 0.911175181181757, 1),
                  tollerance = 1e-2)
